# rs_movie

./: .dockerignore  .gitignore  Dockerfile  index.html  main.py  pyproject.toml
css/: style.css
js/: main.js
rs_movie/: __init__.py
