[project]
name = "rs-movie"
version = "0.1.0"
description = "Movie search and detail viewer"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "snowflake-connector-python",
    "oracledb",
    "python-dotenv",
]

[project.scripts]
start = "rs_movie:run"
dev   = "rs_movie:run_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rs_movie"]
